# percAnalysis

./: .gitignore  README.md
modules/kxpython/: CMakeLists.txt  curvefitting.cpp  curvefitting.h  depends.cmake  gaussianrandomfieldgenerator.cpp  gaussianrandomfieldgenerator.h  kxpythonmodule.cpp  kxpythonmodule.h  kxpythonmoduledefine.h  netcdfsource.cpp  netcdfsource.h  percolationevolutionplot.cpp  percolationevolutionplot.h  percolationplot.cpp  percolationplot.h  readme.md
modules/kxpython/data/: data.csv  dataWithIteration.csv  runs.csv  runsFit.csv  test.csv
modules/kxpython/docs/: kxpythonmodule.qch
modules/kxtools/: CMakeLists.txt  RunForAll.tcl  amirameshvolumereader.cpp  amirameshvolumereader.h  filelistproperty.cpp  filelistproperty.h  iotexthelpers.cpp  iotexthelpers.h  kxtoolsmodule.cpp  kxtoolsmodule.h  kxtoolsmoduledefine.h  performancetimer.cpp  performancetimer.h  setminmaxdatamap.cpp  setminmaxdatamap.h  simplelrucache.h  volumeinterpolation.cpp  volumeinterpolation.h  volumeseriesfromslices.cpp  volumeseriesfromslices.h  volumesourceseries.cpp  volumesourceseries.h  volumesourceseriesdata.cpp  volumesourceseriesdata.h  volumestitching.cpp  volumestitching.h
modules/kxtools/docs/: kxtools.qch  (+1 more)
modules/kxtoolsqt/: CMakeLists.txt  depends.cmake  filelistpropertywidgetqt.cpp  filelistpropertywidgetqt.h  kxtoolsqtmodule.cpp  kxtoolsqtmodule.h  kxtoolsqtmoduledefine.h
modules/kxtoolsqt/docs/: kxtoolsqt.qch  kxtoolsqtmodule.qch
modules/percolation/: CMakeLists.txt  depends.cmake  percolationmodule.cpp  percolationmodule.h  percolationmoduledefine.h
(+37 files in other folders)
